--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,9 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<p><a href="./rest/hello">hello service</a></p>
-	<p><a href="./rest/auth?auth_token=abcdef">validate good</a></p>
-	<p><a href="./rest/auth?auth_token=">validate bad</a></p>
+	<p><a href="./rest/auth?auth_token=abcdef&user_id=steven">validate good</a></p>
+	<p><a href="./rest/auth?auth_token=12345">no user_id</a></p>
+	<p><a href="./rest/auth?user_id=12345">no auth_token</a></p>
+	<p><a href="./rest/auth?auth_token=&user_id=">both blank</a></p>
+	<p><a href="./rest/auth?auth_token=12345&user_id=">user_id blank</a></p>
+	<p><a href="./rest/auth?auth_token=&user_id=12345">auth_token blank</a></p>
 	
 	<form method="post" action="./rest/auth">
 		<p><strong>Authenticate</strong><p>
