--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,6 +11,9 @@
 	<p><a href="./rest/auth?auth_token=&user_id=">both blank</a></p>
 	<p><a href="./rest/auth?auth_token=12345&user_id=">user_id blank</a></p>
 	<p><a href="./rest/auth?auth_token=&user_id=12345">auth_token blank</a></p>
+	<br>
+	
+	<p><a href="./rest/personalplan/username/token/clientid">fetch a personal plan</a></p>
 	
 	<form method="post" action="./rest/auth">
 		<p><strong>Authenticate</strong><p>
