Updated plan resource

--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -14,6 +14,7 @@
 	<br>
 	
 	<p><a href="./rest/personalplan/usernameSteve/token21asdf55/clientidSomeoneElse">fetch a personal plan</a></p>
+	<p><a href="./rest/personalplan/clientdetails/usernameSteve/token21asdf55/clientidSomeoneElse">fetch client details</a></p>
 	
 	<form method="post" action="./rest/auth">
 		<p><strong>Authenticate</strong><p>
