Changed Template and Added New Pages
-Updated layout template
-Added new staff pages (personplan, riskassessment, planmeeting,
reports, goals)
-Added js files to go with associated pages
-Added some functions to global functions
-Added some temporary styling for nav buttons

--- a/WebContent/layout.html
+++ b/WebContent/layout.html
@@ -15,7 +15,17 @@
 		</div> 
 
         <div id="con-body">
-            <div id="con-body-nav"> <h2>Main Page<br />Navigation Menu</h2> </div>
+            <div id="con-body-nav">
+             	<h2>Main Page<br />Navigation Menu</h2> 
+                <ul id="main-nav">
+				<li><a href="index.jsp">Home</a></li>
+				<li><a href="personalplan.jsp">Personal Plan</a></li>
+				<li><a href="riskassessment.jsp">Risk Assessment</a></li>
+				<li><a href="reports.jsp">Reports</a></li>
+				<li><a href="planmeeting.jsp">Plan Meeting</a></li>
+				<li><a href="goals.jsp">Goals</a></li>
+				</ul>
+            </div>
             <div id="con-body-main">
                 <div id="con-body-main-title"> <h2>Page Title</h2> </div>
                 <div id="con-body-main-nav"> <h2>Sub Page Navigation Menu</h2> </div>
