--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -12,9 +12,10 @@
 	<p><a href="./rest/auth?auth_token=12345&user_id=">user_id blank</a></p>
 	<p><a href="./rest/auth?auth_token=&user_id=12345">auth_token blank</a></p>
 	<br>
-	
 	<p><a href="./rest/personalplan/usernameSteve/token21asdf55/clientidSomeoneElse">fetch a personal plan</a></p>
 	<p><a href="./rest/personalplan/clientdetails/usernameSteve/token21asdf55/clientidSomeoneElse">fetch client details</a></p>
+	<br>
+	<p><a href="./rest/role?auth_token=abcdef&user_id=steven">get role</a></p>
 	
 	<form method="post" action="./rest/auth">
 		<p><strong>Authenticate</strong><p>
