--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -19,8 +19,8 @@
 	
 	<form method="post" action="./rest/auth">
 		<p><strong>Authenticate</strong><p>
-		<p><label>UserId: </label><input type="text" id="user_id" /></p>
-		<p><label>Password: </label><input type="password" id="password" /></p>
+		<p><label>UserId: </label><input type="text" name="user_id" /></p>
+		<p><label>Password: </label><input type="password" name="password" /></p>
 		<p><input type="submit" /></p>
 	</form>
 	
