--- a/WebContent/support.html
+++ b/WebContent/support.html
@@ -1,86 +1,92 @@
 <html>
 <head>
 	<script type='text/javascript' src='scripts/jquery.js' ></script>
+	<script type='text/javascript' src='scripts/json2.js' ></script>
 	<link href="css/style.css" rel="stylesheet">
 
 </head>
 <body>
+	<button id='PageNavPrev' name='PageNavPrev' >Previous</button>	
+	<button id='PageNavNext' name='PageNavNext' >Next</button>
+	<button id='PageNavSubmitB' name='PageNavSubmitB'>Submit</button>
+	<div id='testing'></div>
+	
 	<div id='supportD'>
 		<label for='crowdT' class='toggle'>Crowd Safety: </label>
 		<div id='crowdD'>
-			<textarea id='crowdT' name'crowdT' rows="3" cols="50"></textarea>
+			<textarea id='crowdT' name='crowdT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='strangerT' class='toggle'>Stranger Danger: </label>
 		<div id='strangerD'>
-			<textarea id='strangerT' name'strangerT' rows="3" cols="50"></textarea>
+			<textarea id='strangerT' name='strangerT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='moneyT' class='toggle'>Money Handling: </label>
 		<div id='moneyD'>
-			<textarea id='moneyT' name'moneyT' rows="3" cols="50"></textarea>
+			<textarea id='moneyT' name='moneyT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='crowdsT' class='toggle'>Crowds: </label>
 		<div id='crowdsD'>
-			<textarea id='crowdsT' name'crowdsT' rows="3" cols="50"></textarea>
+			<textarea id='crowdsT' name='crowdsT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='socialT' class='toggle'>Maintaining social networks: </label>
 		<div id='socialD'>
-			<textarea id='socialT' name'socialT' rows="3" cols="50"></textarea>
+			<textarea id='socialT' name='socialT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='teleT' class='toggle'>Using a telephone/internet: </label>
 		<div id='teleD'>
-			<textarea id='teleT' name'teleT' rows="3" cols="50"></textarea>
+			<textarea id='teleT' name='teleT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='eatingoutT' class='toggle'>Eating out: </label>
 		<div id='eatingoutD'>
-			<textarea id='eatingoutT' name'eatingoutT' rows="3" cols="50"></textarea>
+			<textarea id='eatingoutT' name='eatingoutT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='beliefsT' class='toggle'>Maintaining cultural and spiritual beliefs: </label>
 		<div id='beliefsD'>
-			<textarea id='beliefsT' name'beliefsT' rows="3" cols="50"></textarea>
+			<textarea id='beliefsT' name='beliefsT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='leisureT' class='toggle'>Leisure and recreation (eg. equiptment): </label>
 		<div id='leisureD'>
-			<textarea id='leisureT' name'leisureT' rows="3" cols="50"></textarea>
+			<textarea id='leisureT' name='leisureT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='appliancesT' class='toggle'>Using appliances: </label>
 		<div id='appliancesD'>
-			<textarea id='appliancesT' name'appliancesT' rows="3" cols="50"></textarea>
+			<textarea id='appliancesT' name='appliancesT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='chemicalT' class='toggle'>Using chemicals: </label>
 		<div id='chemicalD'>
-			<textarea id='chemicalT' name'chemicalT' rows="3" cols="50"></textarea>
+			<textarea id='chemicalT' name='chemicalT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='recoginitionT' class='toggle'>Recoginition of Hazard: </label>
 		<div id='recoginitionD'>
-			<textarea id='recoginitionT' name'recoginitionT' rows="3" cols="50"></textarea>
+			<textarea id='recoginitionT' name='recoginitionT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='otherSafetyT' class='toggle'>Other safety information: </label>
 		<div id='otherSafetyD'>
-			<textarea id='otherSafetyT' name'otherSafetyT' rows="3" cols="50"></textarea>
+			<textarea id='otherSafetyT' name='otherSafetyT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 	</div>
@@ -89,31 +95,31 @@
 	<div id='mobilityD'>
 		<label for='elevatorT' class='toggle'>Stairs/Escalators/Elevators: </label>
 		<div id='elevatorD'>
-			<textarea id='elevatorT' name'elevatorT' rows="3" cols="50"></textarea>
+			<textarea id='elevatorT' name='elevatorT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='unevenT' class='toggle'>Uneven surfaces: </label>
 		<div id='unevenD'>
-			<textarea id='unevenT' name'unevenT' rows="3" cols="50"></textarea>
+			<textarea id='unevenT' name='unevenT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='heightT' class='toggle'>Height: </label>
 		<div id='heightD'>
-			<textarea id='heightT' name'heightT' rows="3" cols="50"></textarea>
+			<textarea id='heightT' name='heightT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='mobilityT' class='toggle'>Mobility aid/support: </label>
 		<div id='mobilityD'>
-			<textarea id='mobilityT' name'mobilityT' rows="3" cols="50"></textarea>
+			<textarea id='mobilityT' name='mobilityT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='roadSafetyT' class='toggle'>Road Safety Skills: </label>
 		<div id='roadSafetyD'>
-			<textarea id='roadSafetyT' name'roadSafetyT' rows="3" cols="50"></textarea>
+			<textarea id='roadSafetyT' name='roadSafetyT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
@@ -125,19 +131,19 @@
 
 		<label for='seatingT' class='toggle'>Seating arrangements and preference when traveling: </label>
 		<div id='seatingD'>
-			<textarea id='seatingT' name'seatingT' rows="3" cols="50"></textarea>
+			<textarea id='seatingT' name='seatingT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='beliefsT' class='toggle'>Maintaining cultural and spirtual beliefs: </label>
 		<div id='beliefsD'>
-			<textarea id='beliefsT' name'beliefsT' rows="3" cols="50"></textarea>
+			<textarea id='beliefsT' name='beliefsT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
-		<label for='otherT' class='toggle'>Other information: </label>
-		<div id='otherD'>
-			<textarea id='otherT' name'otherT' rows="3" cols="50"></textarea>
+		<label for='otherMobilityT' class='toggle'>Other information: </label>
+		<div id='otherMobilityD'>
+			<textarea id='otherMobilityT' name='otherMobilityT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 	</div>
@@ -146,85 +152,85 @@
 	<div id='financialD'>
 		<label for='financialAdminT' class='toggle'>Financial Administrator: </label>
 		<div id='financialAdminD'>
-			<textarea id='financialAdminT' name'financialAdminT' rows="3" cols="50"></textarea>
+			<textarea id='financialAdminT' name='financialAdminT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetAvailableT' class='toggle'>Available budget for expenditure: </label>
 		<div id='budgetAvailableD'>
-			<textarea id='budgetAvailableT' name'budgetAvailableT' rows="3" cols="50"></textarea>
+			<textarea id='budgetAvailableT' name='budgetAvailableT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetContraintsT' class='toggle'>Budget constraints that affect goal planning: </label>
 		<div id='budgetContraintsD'>
-			<textarea id='budgetContraintsT' name'budgetContraintsT' rows="3" cols="50"></textarea>
+			<textarea id='budgetContraintsT' name='budgetContraintsT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='personalItemsT' class='toggle'>Support I require to purchase personal items: </label>
 		<div id='personalItemsD'>
-			<textarea id='personalItemsT' name'personalItemsT' rows="3" cols="50"></textarea>
+			<textarea id='personalItemsT' name='personalItemsT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetTransportT' class='toggle'>Budget for transport: </label>
 		<div id='budgetTransportD'>
-			<textarea id='budgetTransportT' name'budgetTransportT' rows="3" cols="50"></textarea>
+			<textarea id='budgetTransportT' name='budgetTransportT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetSupportHandleT' class='toggle'>Support required for money handling: </label>
 		<div id='budgetSupportHandleD'>
-			<textarea id='budgetSupportHandleT' name'budgetSupportHandleT' rows="3" cols="50"></textarea>
+			<textarea id='budgetSupportHandleT' name='budgetSupportHandleT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetSupportT' class='toggle'>Support required for budgeting: </label>
 		<div id='budgetSupportD'>
-			<textarea id='budgetSupportT' name'budgetSupportT' rows="3" cols="50"></textarea>
+			<textarea id='budgetSupportT' name='budgetSupportT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetFoodT' class='toggle'>Budgeting support required for groceries and other shopping needs: </label>
 		<div id='budgetFoodD'>
-			<textarea id='budgetFoodT' name'budgetFoodT' rows="3" cols="50"></textarea>
+			<textarea id='budgetFoodT' name='budgetFoodT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetHouseT' class='toggle'>Budgeting for house maintenance: </label>
 		<div id='budgetHouseD'>
-			<textarea id='budgetHouseT' name'budgetHouseT' rows="3" cols="50"></textarea>
+			<textarea id='budgetHouseT' name='budgetHouseT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetUtilT' class='toggle'>Budgeting for utilities: </label>
 		<div id='budgetUtilD'>
-			<textarea id='budgetUtilT' name'budgetUtilT' rows="3" cols="50"></textarea>
+			<textarea id='budgetUtilT' name='budgetUtilT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetBillsT' class='toggle'>Budgetting for paying bills: </label>
 		<div id='budgetBillsD'>
-			<textarea id='budgetBillsT' name'budgetBillsT' rows="3" cols="50"></textarea>
+			<textarea id='budgetBillsT' name='budgetBillsT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetSafetyT' class='toggle'>Budgetting for safety and emergency support: </label>
 		<div id='budgetSafetyD'>
-			<textarea id='budgetSafetyT' name'budgetSafetyT' rows="3" cols="50"></textarea>
+			<textarea id='budgetSafetyT' name='budgetSafetyT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='budgetSupportNetworkT' class='toggle'>Budgetting for access to support network: </label>
 		<div id='budgetSupportNetworkD'>
-			<textarea id='budgetSupportNetworkT' name'budgetSupportNetworkT' rows="3" cols="50"></textarea>
+			<textarea id='budgetSupportNetworkT' name='budgetSupportNetworkT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
-		<label for='otherT' class='toggle'>Other: </label>
-		<div id='otherD'>
-			<textarea id='otherT' name'otherT' rows="3" cols="50"></textarea>
+		<label for='otherBudgetT' class='toggle'>Other: </label>
+		<div id='otherBudgetD'>
+			<textarea id='otherBudgetT' name='otherBudgetT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 	</div>
@@ -237,38 +243,34 @@
 	<div id='relaxationD'>
 		<label for='relaxPrefT' class='toggle'>I prefer to relax by doing the following: </label>
 		<div id='relaxPrefD'>
-			<textarea id='relaxPrefT' name'relaxPrefT' rows="3" cols="50"></textarea>
+			<textarea id='relaxPrefT' name='relaxPrefT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='relaxMusicT' class='toggle'>Prefered music for relaxation: </label>
 		<div id='relaxMusicD'>
-			<textarea id='relaxMusicT' name'relaxMusicT' rows="3" cols="50"></textarea>
+			<textarea id='relaxMusicT' name='relaxMusicT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='relaxMovieT' class='toggle'>Prefered movie for relaxation: </label>
 		<div id='relaxMovieD'>
-			<textarea id='relaxMovieT' name'relaxMovieT' rows="3" cols="50"></textarea>
+			<textarea id='relaxMovieT' name='relaxMovieT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='relaxTVT' class='toggle'>Prefered TV shows for relaxation: </label>
 		<div id='relaxTVD'>
-			<textarea id='relaxTVT' name'relaxTVT' rows="3" cols="50"></textarea>
+			<textarea id='relaxTVT' name='relaxTVT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 
 		<label for='relaxOtherT' class='toggle'>Prefered other activities for relaxation: </label>
 		<div id='relaxOtherD'>
-			<textarea id='relaxOtherT' name'relaxOtherT' rows="3" cols="50"></textarea>
+			<textarea id='relaxOtherT' name='relaxOtherT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 	</div>
-
-	<button id='PageNavPrev' name='PageNavPrev' >Previous</button>	
-	<button id='PageNavNext' name='PageNavNext' >Next</button>
-	<button id='PageNavSubmitB' name='PageNavSubmitB'>Submit</button>
 </body>
 </html>
 
@@ -306,13 +308,6 @@
 	};
 
 
-	function Duplicate(divName) {
-		$("#"+divName).append($("#" + divName + "Template").children().clone());
-	};
-		
-
-
-
 
 	$(document).ready(function() {
 		//page load
@@ -322,29 +317,6 @@
 		$("#financialD").hide();
 		$("#activitiesD").hide();
 		$("#relaxationD").hide();
-
-
-		//click on the previous button
-		$("#PageNavPrev").click(function(){
-			PageNavigation('prev');
-		});
-
-		//click on the next button
-		$("#PageNavNext").click(function(){
-			PageNavigation('next');
-		});
-
-		//click on toggle class element
-		$(".toggle").click(function(event){
-			$(this).next().toggle();
-		});
-
-		//finish entering a medical condition
-		$("#testing").click(function(){
-			$(".medCon").val($("#medConditionT").text());
-			alert('testing');
-		});
-
 		
 	});
 </script>
