Added all pages + json post javascript
-Added personalplan, planmeeting, riskassessment, reports and goals
pages with nav elements using the partial templates
-Added url/fixed json post javascript (still doesn't work, comes up with
"error" but does submit json to the url provided)
-Added dynamic user name at the top of the page (client/staff)
-Added jquery.cookie.js references to all client details pages
-Changed index page to be the user's home page (need to add stuff)

--- a/WebContent/client.html
+++ b/WebContent/client.html
@@ -2,6 +2,7 @@
 <head>
 	<script type='text/javascript' src='scripts/jquery.js' ></script>
 	<script type='text/javascript' src='scripts/json2.js' ></script>
+	<script type='text/javascript' src='scripts/jquery.cookie.js' ></script>
 	<link href="css/style.css" rel="stylesheet">
 
 </head>
@@ -390,15 +391,21 @@
 			
 			var jsonText = JSON.stringify(clientDetails);
 			
+			//alert(jsonText);
+			
+			//var test = "./rest/personalplan/clientdetails/" + $.cookie('auth_token') + "/" + $.cookie('user_id') +"/" + personDetails.clientId;
+			//alert(test);
+			
 			$.ajax({
-				url:'',
+				url:'./rest/personalplan/clientdetails/' + $.cookie('auth_token') + '/' + $.cookie('user_id') +'/' + personDetails.clientId,
 				type: 'POST',
-				dataType: 'application/jsonp',
+				dataType: 'application/json',
 				data: jsonText,
 				complete: function(jqXHR, textStatus) {
 					alert(textStatus);
 				}
 			});
+			
 		});
 
 		
