Fixed json post
-Fixed json post on all personal plan pages
-Added temporarily client.html to personal plan page (will change)

--- a/WebContent/client.html
+++ b/WebContent/client.html
@@ -399,7 +399,7 @@
 			$.ajax({
 				url:'./rest/personalplan/clientdetails/' + $.cookie('auth_token') + '/' + $.cookie('user_id') +'/' + personDetails.clientId,
 				type: 'POST',
-				dataType: 'application/json',
+				contentType: 'application/json',
 				data: jsonText,
 				complete: function(jqXHR, textStatus) {
 					alert(textStatus);
