--- a/WebContent/health.html
+++ b/WebContent/health.html
@@ -322,7 +322,7 @@ DROPDOWN HERE + INLINE FORMATTING
 			$.ajax({
 				url:'./rest/personalplan/healthdetails/' + $.cookie('auth_token') + '/' + $.cookie('user_id') +'/' + '/1',
 				type: 'POST',
-				dataType: 'application/jsonp',
+				contentType: 'application/json',
 				data: jsonText,
 				complete: function(jqXHR, textStatus) {
 					alert(textStatus);
