--- a/WebContent/personalplan/health.html
+++ b/WebContent/personalplan/health.html
@@ -1,11 +1,3 @@
-<html>
-<head>
-	<script type='text/javascript' src='scripts/jquery.js' ></script>
-	<script type='text/javascript' src='scripts/json2.js' ></script>
-	<link href="css/style.css" rel="stylesheet">
-
-</head>
-<body>
 	<button id='PageNavPrev' name='PageNavPrev' >Previous</button>	
 	<button id='PageNavNext' name='PageNavNext' >Next</button>
 	<button id='PageNavSubmitB' name='PageNavSubmitB'>Submit</button>
@@ -201,10 +193,6 @@ DROPDOWN HERE + INLINE FORMATTING
 			</div>
 		<br />
 	</div>
-</body>
-</html>
-
-
 
 <script type='text/javascript'>
 	var pageDivNav = new Array("healthD", "hManagementD", "dietD");
@@ -250,6 +238,21 @@ DROPDOWN HERE + INLINE FORMATTING
 		//entering a medical condition
 		$("#medConditionT").keyup(function(){
 			$(".medCon").html($("#medConditionT").val());
+		});
+		
+		//click on the previous button
+		$("#PageNavPrev").click(function(){
+			PageNavigation('prev');
+		});
+
+		//click on the next button
+		$("#PageNavNext").click(function(){
+			PageNavigation('next');
+		});
+
+		//click on toggle class element
+		$(".toggle").click(function(event){
+			$(this).next().toggle();
 		});
 		
 		
