--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -19,7 +19,7 @@
 	<p><a href="./rest/personalplan/usernameSteve/token21asdf55/clientidSomeoneElse">fetch a personal plan</a></p>
 	<p><a href="./rest/personalplan/clientdetails/usernameSteve/token21asdf55/clientidSomeoneElse">fetch client details</a></p>
 	<br>
-	<p><a href="./rest/role?auth_token=abcdef&user_id=steven">get role</a></p>
+	<p><a href="./rest/role?auth_token=HsBijcboKZpa5MaMHl7ZHLFPl5aBsJMY&user_id=client">get role</a></p>
 	
 	<form method="post" action="./rest/auth">
 		<p><strong>Authenticate</strong><p>
