--- a/WebContent/personalplan/communication.html
+++ b/WebContent/personalplan/communication.html
@@ -106,14 +106,11 @@
 			var jsonText = JSON.stringify(communication);
 			$("#testing").html(jsonText);
 			
-			var test = "./rest/personalplan/communication/" + $.cookie('auth_token') + "/" + $.cookie('user_id') +"/1";
-			
-			alert(test);
-			
 			$.ajax({
-				url:'./rest/personalplan/communication/' + $.cookie('auth_token')+ '/' + $.cookie('user_id') +'/1',
+				url:'./rest/personalplan/communication/' + $.cookie('user_id') + "/" + $.cookie('auth_token') +'/1',
 				type: 'POST',
-				contentType: 'application/json',
+				contentType: 'application/json; charset=UTF-8',
+				dataType: 'json',
 				data: jsonText,
 				complete: function(jqXHR, textStatus) {
 					alert(textStatus);
