--- a/WebContent/personalplan/client.html
+++ b/WebContent/personalplan/client.html
@@ -1,8 +1,3 @@
-
-	<button id='PageNavPrev' name='PageNavPrev' >Previous</button>	
-	<button id='PageNavNext' name='PageNavNext' >Next</button>
-	<button id='PageNavSubmitB' name='PageNavSubmitB'>Submit</button>
-	
 	<div id='detailsD'>
 		<label for='profilepic' id='profilepicL' class='toggle'>Picture: </label>
 		<div id='ppD'>
@@ -14,28 +9,28 @@
 		
 		<label for='nameT' id='nameL' class='toggle'>Name: </label>
 		<div id='nameD' >
-			<input type='text' name='nameT' id='nameT' placeholder='Name' />
+			<input type='text' name='nameT' id='nameT' />
 			<p class='error' id='nameE' ></p>
 		</div>
 		<br />
 
 		<label for='nicknameT' id='nicknameL' class='toggle'>I like to be called: </label>
 		<div id='nicknameD'>
-			<input type='text' name='nicknameT' id='nicknameT' placeholder='Nickname' />
+			<input type='text' name='nicknameT' id='nicknameT' />
 			<p class='error' id='nicknameE'></p>
 		</div>
 		<br />
 
 		<label for='IDT' id='IDL' class='toggle'>ID: </label>
 		<div id='IDTD'>
-			<input type='text' name='IDT' id='IDT' placeholder='ID' />
+			<input type='text' name='IDT' id='IDT' />
 			<p class='error' id='IDE' ></p>
 		</div>
 		<br />
 
 		<label for='addressT' id='addressL' class='toggle'>Address: </label>
 		<div id='addressD' >
-			<input type='text' name='addressT' id='addressT' placeholder='Address' />
+			<input type='text' name='addressT' id='addressT' />
 			<p class='error' id='AddressE' ></p>
 		</div>
 		<br />
@@ -246,10 +241,10 @@
 	-->	
 	<div id='familyDTemplate' class='formTemplate'>
 		<label for='familyNameT' >Name: </label>
-		<input type='text' name='familyNameT' id='familyNameT' placeholder='Name' />
+		<input type='text' name='familyNameT' id='familyNameT' />
 		<br />
 		<label for='familyRelationshipT' >Relationship: </label>
-		<input type='text' name='familyRelationshipT' id='familyRelationshipT' placeholder='Name' />
+		<input type='text' name='familyRelationshipT' id='familyRelationshipT' />
 		<br />
 		<label for='familyContactT' >Contact Arangements: </label>
 		<textarea id='familyContactT' name='familyContactT' rows="3" cols="50"></textarea>
@@ -258,10 +253,10 @@
 
 	<div id='otherPeopleDTemplate' class='formTemplate'>
 		<label for='otherPeopleNameT' >Name: </label>
-		<input type='text' name='otherPeopleNameT' id='otherPeopleNameT' placeholder='Name' />
+		<input type='text' name='otherPeopleNameT' id='otherPeopleNameT' />
 		<br />
 		<label for='otherPeopleRelationshipT' >Relationship: </label>
-		<input type='text' name='otherPeopleRelationshipT' id='otherPeopleRelationshipT' placeholder='Name' />
+		<input type='text' name='otherPeopleRelationshipT' id='otherPeopleRelationshipT' />
 		<br />
 		<label for='otherPeopleContactT' >Contact Arrangements: </label>
 		<textarea id='otherPeopleContactT' name='otherPeopleContactT' rows="3" cols="50"></textarea>
@@ -402,9 +397,10 @@
 			//alert(test);
 			
 			$.ajax({
-				url:'./rest/personalplan/clientdetails/' + $.cookie('auth_token') + '/' + $.cookie('user_id') +'/' + personDetails.clientId,
+				url:'./rest/personalplan/clientdetails/' + $.cookie('user_id') + "/" + $.cookie('auth_token') +'/1',
 				type: 'POST',
-				contentType: 'application/json',
+				contentType: 'application/json; charset=UTF-8',
+				dataType: 'json',
 				data: jsonText,
 				complete: function(jqXHR, textStatus) {
 					alert(textStatus);
