--- a/WebContent/personalplan/health.html
+++ b/WebContent/personalplan/health.html
@@ -323,9 +323,10 @@ DROPDOWN HERE + INLINE FORMATTING
 			$("#testing").html(jsonText);
 			
 			$.ajax({
-				url:'./rest/personalplan/healthdetails/' + $.cookie('auth_token') + '/' + $.cookie('user_id') +'/' + '/1',
+				url:'./rest/personalplan/healthdetails/' + $.cookie('user_id') + "/" + $.cookie('auth_token') +'/1',
 				type: 'POST',
-				contentType: 'application/json',
+				contentType: 'application/json; charset=UTF-8',
+				dataType: 'json',
 				data: jsonText,
 				complete: function(jqXHR, textStatus) {
 					alert(textStatus);
