Can now pull employment/education from db

--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -18,6 +18,7 @@
 	<br>
 	<p><a href="./rest/personalplan/usernameSteve/token21asdf55/clientidSomeoneElse">fetch a personal plan</a></p>
 	<p><a href="./rest/personalplan/clientdetails/usernameSteve/token21asdf55/clientidSomeoneElse">fetch client details</a></p>
+	<p><a href="./rest/personalplan/educationemployment/client/HsBijcboKZpa5MaMHl7ZHLFPl5aBsJMY/pewpew">fetch employment/education</a></p>
 	<br>
 	<p><a href="./rest/role?auth_token=HsBijcboKZpa5MaMHl7ZHLFPl5aBsJMY&user_id=client">get role</a></p>
 	
